--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,26 +4,30 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:src="@drawable/icon"
-        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"
         android:id="@+id/icon_image" />
 
     <LinearLayout
+        android:id="@+id/linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:orientation="vertical"
-        android:padding="20dp"
-        android:id="@+id/linear_layout">
+        android:padding="20dp">
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:src="@drawable/logo" />
+
         <Space
             android:layout_width="0dp"
-            android:layout_height="10dp"/>
+            android:layout_height="10dp" />
+
         <Button
             android:id="@+id/login"
             android:layout_width="match_parent"
@@ -31,17 +35,19 @@
             android:background="@drawable/button_background"
             android:text="Log In"
             android:textAllCaps="false" />
+
         <Space
             android:layout_width="0dp"
-            android:layout_height="10dp"/>
+            android:layout_height="10dp" />
+
         <Button
             android:id="@+id/sign_up"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/button_background"
-            android:textColor="#ffffff"
             android:text="Register"
-            android:textAllCaps="false" />
+            android:textAllCaps="false"
+            android:textColor="#ffffff" />
     </LinearLayout>
 
 
