--- a/app/src/main/res/layout/activity_followers.xml
+++ b/app/src/main/res/layout/activity_followers.xml
@@ -186,6 +186,133 @@
 
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/image_profile2"
+                    android:src="@drawable/avatar4"
+                    android:layout_marginLeft="15dp">
+
+                </de.hdodenhof.circleimageview.CircleImageView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/image_profile2"
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical"
+                    android:layout_centerVertical="true">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/username2"
+                        android:text="OngLiem"
+                        android:maxLines="1"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="15sp"
+                        android:layout_marginStart="5dp">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/fullname2"
+                        android:text="Ligma"
+                        android:textSize="13sp"
+                        android:maxLines="1"
+                        android:layout_marginStart="5dp">
+
+                    </TextView>
+
+
+                </LinearLayout>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:id="@+id/btn_follow2"
+                    android:text="Following"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="#D3D3D3"
+                    android:textColor="#262626"
+                    android:visibility="visible"
+                    android:layout_marginEnd="20dp">
+                </Button>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/image_profile3"
+                    android:src="@drawable/avatar5"
+                    android:layout_marginLeft="15dp">
+
+                </de.hdodenhof.circleimageview.CircleImageView>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toEndOf="@id/image_profile3"
+                    android:layout_marginStart="5dp"
+                    android:orientation="vertical"
+                    android:layout_centerVertical="true">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/username3"
+                        android:text="Tired"
+                        android:maxLines="1"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="15sp"
+                        android:layout_marginStart="5dp">
+
+                    </TextView>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/fullname3"
+                        android:text="LeThaiTruongMinh"
+                        android:textSize="13sp"
+                        android:maxLines="1"
+                        android:layout_marginStart="5dp">
+
+                    </TextView>
+
+
+                </LinearLayout>
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:id="@+id/btn_follow3"
+                    android:text="Following"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="#D3D3D3"
+                    android:textColor="#262626"
+                    android:visibility="visible"
+                    android:layout_marginEnd="20dp">
+                </Button>
+
+            </RelativeLayout>
 
 
         </LinearLayout>
