--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -4,12 +4,11 @@
     android:layout_height="match_parent">
 
     <ImageView
+        android:id="@+id/icon_image"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"
-        android:id="@+id/icon_image" />
+        android:layout_centerInParent="true"
+        android:src="@drawable/icon" />
 
     <LinearLayout
         android:id="@+id/linear_layout"
