--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -29,26 +29,17 @@
                     android:src="@drawable/ic_close"
                     android:layout_centerVertical="true"
                     android:layout_alignParentStart="true"
-                    android:id="@+id/close"/>
+                    android:id="@+id/close"
+                    tools:ignore="ContentDescription" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Edit Profile"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
                     android:textSize="18sp"
                     android:layout_toEndOf="@id/close"/>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="SAVE"
-                    android:layout_marginEnd="10dp"
-                    android:textSize="18sp"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/save"/>
 
             </RelativeLayout>
 
@@ -73,7 +64,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Photo"
             android:layout_gravity="center"
             android:id="@+id/change_photo"
             android:textColor="@color/colorPrimary"
@@ -83,7 +73,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/fullname"
-            android:hint="Full name"
             android:layout_marginTop="20dp"
             app:met_floatingLabel="normal"/>
 
@@ -91,7 +80,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/username"
-            android:hint="Username"
             android:layout_marginTop="20dp"
             app:met_floatingLabel="normal"/>
 
@@ -99,7 +87,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bio"
-            android:hint="Bio"
             android:layout_marginTop="20dp"
             app:met_floatingLabel="normal"/>
 
