--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/luong"
         android:id="@+id/image" />
 
     <LinearLayout
@@ -23,13 +21,11 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
-        <!--            android:id="@id/reverse">-->
 
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"/>
-        <!--            android:id="@id/skip"/>-->
 
         <ImageView
             android:id="@+id/close"
@@ -39,7 +35,8 @@
             android:layout_marginTop="25dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_close" />
+            android:src="@drawable/ic_close"
+            tools:ignore="ContentDescription" />
     </LinearLayout>
 
 
@@ -62,7 +59,6 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/luong"
         android:id="@+id/story_photo"/>
 
         <TextView
@@ -78,7 +74,8 @@
             android:text="Phi Doan Lon Ton"
             android:textColor="@color/white"
             android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 </RelativeLayout>
