--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -6,8 +6,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/image_profile"
-        android:src="@mipmap/ic_launcher"/>
+        android:id="@+id/image_profile"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,13 +19,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="bold"
-            android:id="@+id/username"
-            android:text="Username"/>
+            android:id="@+id/username" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="commentttt"
             android:maxLines="5"
             android:id="@+id/comment"/>
 
